--- a/.github/workflows/rootfs.yml
+++ b/.github/workflows/rootfs.yml
@@ -7,7 +7,7 @@ on:
       - 'Dockerfile.*'
   workflow_dispatch:
 permissions:
-  contents: write  #
+  contents: write  #.
   actions: read    
 jobs:
   build-ubuntu:
